--- a/style.css
+++ b/style.css
@@ -6,29 +6,34 @@
 li,
 a,
 button {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Fantasy;
   font-weight: 500;
-  font-size: 16px;
-  color: #cadaff;
+  font-size: 30px;
+  color: #145c5c;
   text-decoration: none;
 }
 
 .title {
-
+  font-family: Fantasy;
   text-align: center;
   font-size: 60px;
-  color: #135480;
+  color: #0f4e58;
   margin-right: auto;
+}
+.title:hover{
+  color: #0b3e46;
 }
 
 header {
+  z-index:1;
+  height: auto;
   width: 100%;
-  background-image: linear-gradient(to top left,  #81A190, #A2C0A0);
+  background-image: linear-gradient(to top left, #81a190, #a2c0a0);
   display: flex;
   font-size: 1.8rem;
   justify-content: flex-end;
   align-items: center;
-  position:fixed;
+  position: fixed;
 }
 
 .logo {
@@ -36,6 +41,10 @@ header {
   cursor: pointer;
   width: 80px;
   height: 80px;
+  transition: transform .2s;
+}
+.logo:hover{
+  transform: scale(1.2);
 }
 
 .nav_links {
@@ -43,7 +52,6 @@ header {
 }
 
 .nav_links li {
-  
   display: inline-block;
   padding: 0px 20px;
 }
@@ -54,28 +62,30 @@ header {
 }
 
 .nav_links li a:hover {
-  color: #adb5c5;
+  color: #0f4747;
 }
 
 button {
-  margin-left: 20px;
-  margin-right: 20px;
+  color: #43aaaa;
+  margin-left: 15px;
+  margin-right: 15px;
   font-size: 30x;
-  padding: 9px 25px;
-  background-color: #395485;
+  padding: 9px 20px;
+  background-color: #043a50;
   border: none;
-  border-radius: 50px;
+  border-radius: 40px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 }
 
 button:hover {
-  background-color: #304980;
+  background-color: #033042;
 }
 
 .backGround {
-  background-image: linear-gradient(to top left,  #81A190, #A2C0A0, #DBE8D9 );
-  height: 1200px;
+  z-index:-1;
+  background-image: linear-gradient(to top left, #81a190, #a2c0a0, #dbe8d9);
+  height: 1600px;
   background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
@@ -83,10 +93,17 @@ button:hover {
 }
 
 .body {
-  background-image: linear-gradient(#CCC2CD );
+  z-index:0;
+  top: 100px;
+  position: relative;
+  border-style: groove;
+  border-width: 20px;
+  border-radius: 25px;
+  border-color: #81a190;
+  background-image: linear-gradient(to top right, #bed6bc, #dbe8d9);
   margin: auto;
-  height: 85%;
-  width: 80%;
+  height: 80%;
+  width: 72%;
   background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
