--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Fantasy;
+}
+h1 {
+  font-family: Fantasy;
+  font-size: 60px;
+  color: #145c5c;
+}
+label {
+  font-family: Fantasy;
+  font-weight: 500;
+  font-size: 30px;
+  color: #145c5c;
+  text-decoration: none;
+  margin-top: 30px;
 }
 
+p,
 li,
-a,
-button {
+a {
   font-family: Fantasy;
   font-weight: 500;
   font-size: 30px;
@@ -20,12 +34,12 @@ button {
   color: #0f4e58;
   margin-right: auto;
 }
-.title:hover{
+.title:hover {
   color: #0b3e46;
 }
 
 header {
-  z-index:1;
+  z-index: 1;
   height: auto;
   width: 100%;
   background-image: linear-gradient(to top left, #81a190, #a2c0a0);
@@ -41,9 +55,9 @@ header {
   cursor: pointer;
   width: 80px;
   height: 80px;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
-.logo:hover{
+.logo:hover {
   transform: scale(1.2);
 }
 
@@ -57,7 +71,7 @@ header {
 }
 
 .nav_links li a {
-  font-size: 20px;
+  font-size: 30px;
   transition: all 0.3s ease 0s;
 }
 
@@ -65,11 +79,11 @@ header {
   color: #0f4747;
 }
 
-button {
-  color: #43aaaa;
+header button {
+  color: rgb(83, 168, 140);
   margin-left: 15px;
   margin-right: 15px;
-  font-size: 30x;
+  font-size: 30px;
   padding: 9px 20px;
   background-color: #043a50;
   border: none;
@@ -78,14 +92,16 @@ button {
   transition: all 0.3s ease 0s;
 }
 
-button:hover {
+header button:hover {
   background-color: #033042;
 }
 
 .backGround {
-  z-index:-1;
+  position: absolute;
+  z-index: -1;
   background-image: linear-gradient(to top left, #81a190, #a2c0a0, #dbe8d9);
   height: 1600px;
+  width: 100%;
   background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
@@ -93,7 +109,8 @@ button:hover {
 }
 
 .body {
-  z-index:0;
+  padding: 20px;
+  z-index: 0;
   top: 100px;
   position: relative;
   border-style: groove;
@@ -102,11 +119,346 @@ button:hover {
   border-color: #81a190;
   background-image: linear-gradient(to top right, #bed6bc, #dbe8d9);
   margin: auto;
-  height: 80%;
-  width: 72%;
+  height: 75%;
+  width: 65%;
   background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-/*#EBDFE7, #CCC2CD, #81A190, #A2C0A0, #DBE8D9*/
+.body_image {
+  margin-bottom: 40px;
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.body_title {
+  position: relative;
+  text-align: center;
+  display: block;
+  font-size: 60px;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  text-decoration: underline;
+}
+.body_paragraph {
+  position: relative;
+  text-align: center;
+  display: block;
+  font-size: 45px;
+  margin: auto;
+  width: 75%;
+}
+
+.body_button {
+  font-family: Fantasy;
+  font-weight: 500;
+  font-size: 30px;
+  color: #145c5c;
+  text-decoration: none;
+  position: relative;
+  margin-top: 100%;
+}
+#body_botleft_btn {
+  position: absolute;
+  top: 88%;
+  left: 4%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background: url(/images/capoo_cry_weired2.jpg) no-repeat;
+  background-size: 100% 100%;
+  width: 240px;
+  height: 220px;
+  border: none;
+}
+#body_botright_btn {
+  position: absolute;
+  top: 88%;
+  left: 76%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background: url(/images/capoo_reject_weired.jpg) no-repeat;
+  background-size: 100% 100%;
+  width: 240px;
+  height: 220px;
+  border: none;
+}
+
+#body_botleft_btn:active {
+  background: url(/images/alvin.jpg) no-repeat;
+  background-size: 100% 100%;
+}
+#body_botright_btn:active {
+  background: url(/images/johnson.jpeg) no-repeat;
+  background-size: 100% 100%;
+}
+button:focus {
+  outline: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+input[type="text"],
+input[type="password"] {
+  font-family: Fantasy;
+  font-size: 20px;
+  width: 100%;
+  padding: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+hr {
+  border: 2px solid #1e7562;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.cancelbtn {
+  color: rgb(98, 197, 164);
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 30px;
+  padding: 9px 20px;
+  background-color: #043a50;
+  border: dark;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+.signupbtn {
+  color: rgb(98, 197, 164);
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 30px;
+  padding: 9px 20px;
+  background-color: #043a50;
+  border: dark;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+.cancelbtn,
+.signupbtn {
+  float: left;
+  width: 30%;
+  height: 15%;
+}
+
+.container {
+  padding: 20px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.background_capoos{
+  visibility: hidden;
+}
+.background_capoos img {
+  visibility: hidden;
+  display: block;
+  position: absolute;
+  bottom: 3%;
+  height: 230px;
+  width: 230px;
+}
+
+.background_capoos img:nth-of-type(1) {
+  left: 5%;
+}
+
+.background_capoos img:nth-of-type(2) {
+  left: 30%;
+}
+
+.background_capoos img:nth-of-type(3) {
+  right: 30%;
+}
+
+.background_capoos img:nth-of-type(4) {
+  right: 5%;
+}
+
+.background_capoos img:nth-of-type(5) {
+  top: 10%;
+  left: 2%;
+}
+
+.background_capoos img:nth-of-type(6) {
+  top: 35%;
+  left: 2%;
+}
+
+.background_capoos img:nth-of-type(7) {
+  top: 55%;
+  left: 2%;
+}
+
+.background_capoos img:nth-of-type(8) {
+  top: 55%;
+  right: 2%;
+}
+
+.background_capoos img:nth-of-type(9) {
+  top: 35%;
+  right: 2%;
+}
+
+.background_capoos img:nth-of-type(10) {
+  top: 10%;
+  right: 2%;
+}
+
+.score {
+  margin-left: 35%;
+  font-size: 35px;
+  background: rgb(18, 95, 91);
+  padding: 10px 120px;
+  line-height: 1;
+  border-radius: 16px;
+  color: #fff;
+}
+
+.game {
+  width: 900px;
+  height: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.hole {
+  flex: 1 0 33.33%;
+  overflow: hidden;
+  position: relative;
+}
+
+.hole:after {
+  display: block;
+  background: url(./images/dirt.png) bottom center no-repeat;
+  background-size: contain;
+  content: "";
+  width: 100%;
+  height: 90px;
+  position: absolute;
+  z-index: 2;
+  bottom: -30px;
+}
+
+.capoo {
+  background: url("./images/capoo_looking_forward.jpg") bottom center no-repeat;
+  background-size: 80%;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s;
+}
+
+.hole.up .capoo {
+  top: 0;
+}
+
+@media (min-width: 667px) and (max-width: 1024px) {
+  h1 {
+    display: none;
+  }
+  .score {
+    background: rgb(28, 80, 114);
+    padding: 0 12px;
+    line-height: 1;
+    border-radius: 16px;
+    color: #fff;
+    font-size: 40px;
+    margin-left: 20px;
+  }
+
+  .hole.up .capoo {
+    top: 20px;
+  }
+}
+
+@media (max-width: 667px) {
+  .game {
+    width: 667px;
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+
+  .score {
+    width: 35px;
+    font-size: 15px;
+    height: 40px;
+    color: #fff;
+    background-color: blue;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 5px;
+  }
+
+  .hole:after {
+    display: block;
+    background: url(./images/dirt.png) bottom center no-repeat;
+    background-size: contain;
+    content: "";
+    max-width: 70%;
+    height: 60px;
+    position: absolute;
+    z-index: 2;
+    bottom: -30px;
+  }
+
+  .capoo {
+    background: url("./images/capoo_looking_forward.jpg") bottom center
+      no-repeat;
+    background-size: 60%;
+    position: absolute;
+    top: 100%;
+    max-width: 70%;
+    height: 70%;
+    transition: all 0.4s;
+  }
+
+  .hole.up .capoo {
+    top: 50px;
+  }
+}
+
+.startgamebtn {
+  color: rgb(83, 168, 140);
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 40px;
+  padding: 5px 20px;
+  background-color: #12536d;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
